--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,19 @@
 # Prerequisites
 *.d
 
+#cmake stuff
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+
 # Compiled Object files
 *.slo
 *.lo
