updated cmake version

--- a/game1/CMakeLists.txt
+++ b/game1/CMakeLists.txt
@@ -2,10 +2,23 @@
 cmake_minimum_required(VERSION 2.8)
 
 set(PROJECT_NAME sprite-test)
-set(${PROJECT_NAME}_VERSION_MAJOR 1)
-set(${PROJECT_NAME}_VERSION_MINOR 0)
+set(APP_MAJOR_VERSION "1")
+set(APP_MINOR_VERSION "1")
+set(APP_PATCH_VERSION "0")
+set(APP_VERSION_STRING "${APP_MAJOR_VERSION}.${APP_MINOR_VERSION}.${APP_PATCH_VERSION}")
 
-project(${PROJECT_NAME})
+
+# setup versioning based on the cmake version 
+if (CMAKE_VERSION VERSION_LESS 3.0)
+  PROJECT(${PROJECT_NAME} CXX)
+  set(PROJECT_VERSION_MAJOR "${APP_MAJOR_VERSION}")
+  set(PROJECT_VERSION_MINOR "${APP_MINOR_VERSION}")
+  set(PROJECT_VERSION_PATCH"${APP_PATCH_VERSION}")
+  set(PROJECT_VERSION "${APP_VERSION_STRING}")
+else()
+  cmake_policy(SET CMP0048 NEW)
+  PROJECT(${PROJECT_NAME} VERSION "${APP_VERSION_STRING}" LANGUAGES CXX)
+endif()
 
 ## Configurations
 
