--- a/game1/.vscode/settings.json
+++ b/game1/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "cmake.configureOnOpen": false
+    "cmake.configureOnOpen": false,
+    "C_Cpp.default.configurationProvider": "vector-of-bool.cmake-tools"
 }
