added support for animationsetfactory

--- a/game1/CMakeLists.txt
+++ b/game1/CMakeLists.txt
@@ -51,7 +51,7 @@ set(${PROJECT_NAME}_SRCS
             src/BitmapResource.cpp
             src/Game.cpp
 
-            persist/src
+            persist/src/AnimationSetFactory.cpp
             )
 
 set(${PROJECT_NAME}_LINK_LIBS )
