--- a/game1/Makefile
+++ b/game1/Makefile
@@ -123,6 +123,33 @@ sprite-test/fast:
 	$(MAKE) -f CMakeFiles/sprite-test.dir/build.make CMakeFiles/sprite-test.dir/build
 .PHONY : sprite-test/fast
 
+persist/src/AnimationSetFactory.o: persist/src/AnimationSetFactory.cpp.o
+
+.PHONY : persist/src/AnimationSetFactory.o
+
+# target to build an object file
+persist/src/AnimationSetFactory.cpp.o:
+	$(MAKE) -f CMakeFiles/sprite-test.dir/build.make CMakeFiles/sprite-test.dir/persist/src/AnimationSetFactory.cpp.o
+.PHONY : persist/src/AnimationSetFactory.cpp.o
+
+persist/src/AnimationSetFactory.i: persist/src/AnimationSetFactory.cpp.i
+
+.PHONY : persist/src/AnimationSetFactory.i
+
+# target to preprocess a source file
+persist/src/AnimationSetFactory.cpp.i:
+	$(MAKE) -f CMakeFiles/sprite-test.dir/build.make CMakeFiles/sprite-test.dir/persist/src/AnimationSetFactory.cpp.i
+.PHONY : persist/src/AnimationSetFactory.cpp.i
+
+persist/src/AnimationSetFactory.s: persist/src/AnimationSetFactory.cpp.s
+
+.PHONY : persist/src/AnimationSetFactory.s
+
+# target to generate assembly for a file
+persist/src/AnimationSetFactory.cpp.s:
+	$(MAKE) -f CMakeFiles/sprite-test.dir/build.make CMakeFiles/sprite-test.dir/persist/src/AnimationSetFactory.cpp.s
+.PHONY : persist/src/AnimationSetFactory.cpp.s
+
 src/AnimatedSprite.o: src/AnimatedSprite.cpp.o
 
 .PHONY : src/AnimatedSprite.o
@@ -321,6 +348,9 @@ help:
 	@echo "... rebuild_cache"
 	@echo "... sprite-test"
 	@echo "... edit_cache"
+	@echo "... persist/src/AnimationSetFactory.o"
+	@echo "... persist/src/AnimationSetFactory.i"
+	@echo "... persist/src/AnimationSetFactory.s"
 	@echo "... src/AnimatedSprite.o"
 	@echo "... src/AnimatedSprite.i"
 	@echo "... src/AnimatedSprite.s"
