--- a/game1/Makefile
+++ b/game1/Makefile
@@ -48,10 +48,10 @@ RM = /usr/bin/cmake -E remove -f
 EQUALS = =
 
 # The top-level source directory on which CMake was run.
-CMAKE_SOURCE_DIR = /media/kieron/Data/code/allegro/game1
+CMAKE_SOURCE_DIR = /media/kieron/data/code/allegro/game1
 
 # The top-level build directory on which CMake was run.
-CMAKE_BINARY_DIR = /media/kieron/Data/code/allegro/game1
+CMAKE_BINARY_DIR = /media/kieron/data/code/allegro/game1
 
 #=============================================================================
 # Targets provided globally by CMake.
@@ -69,8 +69,8 @@ rebuild_cache/fast: rebuild_cache
 
 # Special rule for the target edit_cache
 edit_cache:
-	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --cyan "Running CMake cache editor..."
-	/usr/bin/cmake-gui -S$(CMAKE_SOURCE_DIR) -B$(CMAKE_BINARY_DIR)
+	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --cyan "No interactive CMake dialog available..."
+	/usr/bin/cmake -E echo No\ interactive\ CMake\ dialog\ available.
 .PHONY : edit_cache
 
 # Special rule for the target edit_cache
@@ -80,9 +80,9 @@ edit_cache/fast: edit_cache
 
 # The main all target
 all: cmake_check_build_system
-	$(CMAKE_COMMAND) -E cmake_progress_start /media/kieron/Data/code/allegro/game1/CMakeFiles /media/kieron/Data/code/allegro/game1/CMakeFiles/progress.marks
+	$(CMAKE_COMMAND) -E cmake_progress_start /media/kieron/data/code/allegro/game1/CMakeFiles /media/kieron/data/code/allegro/game1/CMakeFiles/progress.marks
 	$(MAKE) -f CMakeFiles/Makefile2 all
-	$(CMAKE_COMMAND) -E cmake_progress_start /media/kieron/Data/code/allegro/game1/CMakeFiles 0
+	$(CMAKE_COMMAND) -E cmake_progress_start /media/kieron/data/code/allegro/game1/CMakeFiles 0
 .PHONY : all
 
 # The main clean target
